WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158071
ASSERT in WebCore::TextTrackList::remove when running media/track/track-remove-track.html
https://bugs.webkit.org/show_bug.cgi?id=158071
Summary
ASSERT in WebCore::TextTrackList::remove when running media/track/track-remov...
Eric Carlson
Reported
2016-05-25 07:19:21 PDT
The assert in WebCore::TextTrackList::remove is not correct, causing media/track/track-remove-track.html to sometimes crash on a debug bot.
Attachments
Proposed patch
(1.41 KB, patch)
2016-05-25 07:28 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-05-25 07:19:50 PDT
<
rdar://problem/26432041
>
Eric Carlson
Comment 2
2016-05-25 07:27:56 PDT
Test results with a crash here:
https://build.webkit.org/results/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/r201300%20(5374)/results.html
Eric Carlson
Comment 3
2016-05-25 07:28:26 PDT
Created
attachment 279770
[details]
Proposed patch
Chris Dumez
Comment 4
2016-05-25 08:57:11 PDT
Comment on
attachment 279770
[details]
Proposed patch r=me
WebKit Commit Bot
Comment 5
2016-05-25 09:18:43 PDT
Comment on
attachment 279770
[details]
Proposed patch Clearing flags on attachment: 279770 Committed
r201385
: <
http://trac.webkit.org/changeset/201385
>
WebKit Commit Bot
Comment 6
2016-05-25 09:18:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug