ASSERT in WebCore::TextTrackList::remove when running media/track/track-remove-track.html https://bugs.webkit.org/show_bug.cgi?id=158071 <rdar://problem/26432041>

Reviewed by Chris Dumez.

No new tests, this prevents media/track/track-remove-track.html from crashing.

* html/track/TextTrackList.cpp:
(TextTrackList::remove): Don't assert when the media element has  been set to null.


Canonical link: https://commits.webkit.org/176189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201385 268f45cc-cd09-0410-ab3c-d52691b4dbfc